# hyperenclave

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  linker.lds  x86_64.json
.githooks/: post-commit  pre-commit
crates/libvmm/: Cargo.toml  README.md
crates/libvmm/libvmm_macros/: Cargo.toml
crates/libvmm/libvmm_macros/src/: lib.rs  vmcs.rs
crates/libvmm/src/: lib.rs
crates/libvmm/src/x86_64/: mod.rs  msr.rs
crates/libvmm/src/x86_64/svm/: definitions.rs  flags.rs  mod.rs  vmcb.rs
crates/libvmm/src/x86_64/vmx/: definitions.rs  flags.rs  instructions.rs  mod.rs  vmcs.rs
crates/uart_16550/: Cargo.toml  Changelog.md  LICENSE  README.md
crates/uart_16550/.github/workflows/: build.yml
crates/uart_16550/src/: lib.rs
crates/yogcrypt/: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
crates/yogcrypt/benches/: yogcrypt_benchmarks.rs
crates/yogcrypt/src/: lib.rs
crates/yogcrypt/src/basic/: mod.rs  rand.S  random.rs  util.rs
crates/yogcrypt/src/basic/cell/: mod.rs  u64x4.rs  u64x8.rs
crates/yogcrypt/src/basic/field/: field_n.rs  field_p.rs  mod.rs
crates/yogcrypt/src/basic/group/: ecc_group.rs  mod.rs
crates/yogcrypt/src/sm2/: mod.rs
crates/yogcrypt/src/sm3/: mod.rs
crates/yogcrypt/src/sm4/: mod.rs
demos/RemoteAttestation/: README.md  RemoteAttestation.sh
scripts/: start_hyperenclave.sh
src/: cell.rs  config.rs  consts.rs  cpumask.rs  error.rs  ffi.rs  header.rs  intervaltree.rs  lang.rs  logging.rs  main.rs  percpu.rs  stats.rs
src/arch/x86_64/: context.rs  cpu.rs  cpuid.rs  enclave.rs  entry.rs  exception.rs  mod.rs  page_table.rs  segmentation.rs  serial.rs  tables.rs  vmm.rs  xsave.rs
src/arch/x86_64/amd/: enclave.rs  iommu.rs  mem_encrypt.rs  mod.rs  npt.rs  vcpu.rs  vmexit.rs
src/arch/x86_64/intel/: enclave.rs  ept.rs  mod.rs  structs.rs  vcpu.rs  vmexit.rs  vtd.rs
src/enclave/: edmm.rs  epcm.rs  manager.rs  measure.rs  mod.rs  reclaim.rs  report.rs  sgx.rs  shared_mem.rs  structs.rs  thread.rs  tlb_track.rs
src/hypercall/: enclave.rs  error.rs  mod.rs  tc.rs
src/iommu/: mod.rs
src/memory/: addr.rs  cmr.rs  frame.rs  gaccess.rs  heap.rs  mapper.rs  mm.rs  mmio.rs  mod.rs  paging.rs
