[package]
name = "libvmm"
version = "0.1.0"
authors = ["Kailun Qin <kailun.qkl@antfin.com>", "Yuekai Jia <yuekai.jyk@antgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vmx"]
vmx = ["libvmm_macros/vmx"]
svm = []

[dependencies]
bitflags = "1.0.4"
bit_field = "0.10"
numeric-enum-macro = "0.2"
libvmm_macros = { path = "./libvmm_macros", version = "0.1.0" }

[dev-dependencies]
memoffset = "0.6"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.34"
