[package]
name = "uart_16550"
version = "0.2.14"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>", "Philipp Oppermann <dev@phil-opp.com>"]
description = "Minimal support for uart_16550 serial output."
license = "MIT"
repository = "https://github.com/rust-osdev/uart_16550"
edition = "2018"

[dependencies]
bitflags = "1.1.0"
x86_64 = { version = "0.14.0", default-features = false, features = ["instructions"] }

[features]
default = [ "nightly" ]
stable = [ "x86_64/external_asm" ]
nightly = [ "x86_64/inline_asm" ]

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
