[package]
name = "libvmm_macros"
version = "0.1.0"
authors = ["Kailun Qin <kailun.qkl@antfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = ["vmx"]
vmx = []

[dependencies]
syn = { version = "1.0.5", features = ["full"]  }
quote = "1.0.2"
numeric-enum-macro = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.34"
